Refactor lesson content structure and enhance achievement filtering
- Replace flat lesson content field with structured sections array
- Add section properties: heading, body, tip, keyRule, relatedRoadSignCode, sortOrder
- Filter achievements by productCode (includes product-specific and platform-wide)
- Add productCode field to StrapiAchievementDefDto
- Add domainWeights and difficultyDistribution to ExamConfig
- Update Strapi client to populate lesson sections and achievement product filters
- Update